# Simple_File_Compressor

./: .gitignore  LICENSE  temp_test.huff  test.huff  test_overwrite.txt
.github/workflows/: build-tauri.yml
core/: CMakeLists.txt  huffpack
core/include/: Archiver.h  BitStream.h  Huffman.h
core/src/: Archiver.cpp  BitStream.cpp  Huffman.cpp  main.cpp  wasm_bridge.cpp
web/: package-lock.json  package.json
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: huffpack.json
web/src-tauri/src/: lib.rs
web/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
